<resources>
    <string name="app_name">MangoChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="verify_desc">We have send you an (OTP) in this mobile number</string>
    <string name="get_otp">GET OTP</string>
    <string name="empty_string" />
    <string name="verify">Verify</string>
    <string name="otp_verification_label">OTP Verification</string>
    <string name="otp_verification_desc">Enter the otp sent to your number</string>
    <string name="wrong_try_again">Something went wrong try again</string>
    <string name="internet_connection">No internet connection</string>
    <string name="consists_otp_code">The otp code must consist of 6 characters</string>
    <string name="name">Name</string>
    <string name="user_name">User name</string>
    <string name="register">Register</string>
    <string name="registration_label">Enter the registration details</string>
    <string name="registration_desc">To continue, fill in all the fields below</string>
    <string name="user_name_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-_</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="add_new_chat">Add new chat</string>
    <string name="city">City</string>
    <string name="zodiac_sign">Zodiac sign</string>
    <string name="date_of_birthday">Date of birthday</string>
    <string name="check">Check</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>